tests/outref/TGB06.ref

-- TGB06 : OCTO55 : Edge case GROUP BY and/or HAVING queries that work in Postgres but do not work in Octo

--> Below should not error out even though subquery uses aggregate function on column from outer query
--> even though the aggregate function usage is inside a WHERE clause or FROM clause.
SELECT COUNT(id),(SELECT n2.id FROM names n2 WHERE n2.id = COUNT(n1.id)) FROM names n1;
SELECT (SELECT n3.id FROM names n3 ORDER BY COUNT(n1.id) LIMIT 1),(SELECT n2.id FROM names n2 WHERE n2.id = COUNT(n1.id) LIMIT 1) FROM names n1;
SELECT (SELECT n3.id FROM names n3 LEFT JOIN names n4 ON n4.id = COUNT(n1.id) ORDER BY COUNT(n1.id) LIMIT 1),(SELECT n2.id FROM names n2 WHERE n2.id = COUNT(n1.id) LIMIT 1) FROM names n1;
SELECT (SELECT n3.id FROM names n3 WHERE n3.id = COUNT(n1.id) LIMIT 1),(SELECT n2.id FROM names n2 ORDER BY COUNT(n1.id) LIMIT 1) FROM names n1;
SELECT (SELECT id FROM names n1 WHERE COUNT(n2.id) = 6 LIMIT 1),COUNT(n2.id) FROM names n2;

[ERROR] PATH:LINENUM DATE TIME : Aggregate functions are not allowed in WHERE
Error with syntax near (line 3, column 60):

--> Below should not error out even though subquery uses aggregate function on column from outer query
--> even though the aggregate function usage is inside a WHERE clause or FROM clause.
SELECT COUNT(id),(SELECT n2.id FROM names n2 WHERE n2.id = COUNT(n1.id)) FROM names n1;
                                                           ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Aggregate functions are not allowed in WHERE
Error with syntax near (line 3, column 60):

--> Below should not error out even though subquery uses aggregate function on column from outer query
--> even though the aggregate function usage is inside a WHERE clause or FROM clause.
SELECT COUNT(id),(SELECT n2.id FROM names n2 WHERE n2.id = COUNT(n1.id)) FROM names n1;
                                                           ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: --> Below should not error out even though subquery uses aggregate function on column from outer query
--> even though the aggregate function usage is inside a WHERE clause or FROM clause.
SELECT COUNT(id),(SELECT n2.id FROM names n2 WHERE n2.id = COUNT(n1.id)) FROM names n1;
[ERROR] PATH:LINENUM DATE TIME : Column ID must appear in the GROUP BY clause or be used in an aggregate function
Error with syntax near (line 1, column 16):

SELECT (SELECT n3.id FROM names n3 ORDER BY COUNT(n1.id) LIMIT 1),(SELECT n2.id FROM names n2 WHERE n2.id = COUNT(n1.id) LIMIT 1) FROM names n1;
               ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 109):

SELECT (SELECT n3.id FROM names n3 ORDER BY COUNT(n1.id) LIMIT 1),(SELECT n2.id FROM names n2 WHERE n2.id = COUNT(n1.id) LIMIT 1) FROM names n1;
                                                                                                            ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT n3.id FROM names n3 ORDER BY COUNT(n1.id) LIMIT 1),(SELECT n2.id FROM names n2 WHERE n2.id = COUNT(n1.id) LIMIT 1) FROM names n1;
[ERROR] PATH:LINENUM DATE TIME : Aggregate functions are not allowed in JOIN conditions
Error with syntax near (line 1, column 66):

SELECT (SELECT n3.id FROM names n3 LEFT JOIN names n4 ON n4.id = COUNT(n1.id) ORDER BY COUNT(n1.id) LIMIT 1),(SELECT n2.id FROM names n2 WHERE n2.id = COUNT(n1.id) LIMIT 1) FROM names n1;
                                                                 ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Column ID must appear in the GROUP BY clause or be used in an aggregate function
Error with syntax near (line 1, column 16):

SELECT (SELECT n3.id FROM names n3 LEFT JOIN names n4 ON n4.id = COUNT(n1.id) ORDER BY COUNT(n1.id) LIMIT 1),(SELECT n2.id FROM names n2 WHERE n2.id = COUNT(n1.id) LIMIT 1) FROM names n1;
               ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 152):

SELECT (SELECT n3.id FROM names n3 LEFT JOIN names n4 ON n4.id = COUNT(n1.id) ORDER BY COUNT(n1.id) LIMIT 1),(SELECT n2.id FROM names n2 WHERE n2.id = COUNT(n1.id) LIMIT 1) FROM names n1;
                                                                                                                                                       ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT n3.id FROM names n3 LEFT JOIN names n4 ON n4.id = COUNT(n1.id) ORDER BY COUNT(n1.id) LIMIT 1),(SELECT n2.id FROM names n2 WHERE n2.id = COUNT(n1.id) LIMIT 1) FROM names n1;
[ERROR] PATH:LINENUM DATE TIME : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 50):

SELECT (SELECT n3.id FROM names n3 WHERE n3.id = COUNT(n1.id) LIMIT 1),(SELECT n2.id FROM names n2 ORDER BY COUNT(n1.id) LIMIT 1) FROM names n1;
                                                 ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Column ID must appear in the GROUP BY clause or be used in an aggregate function
Error with syntax near (line 1, column 80):

SELECT (SELECT n3.id FROM names n3 WHERE n3.id = COUNT(n1.id) LIMIT 1),(SELECT n2.id FROM names n2 ORDER BY COUNT(n1.id) LIMIT 1) FROM names n1;
                                                                               ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT n3.id FROM names n3 WHERE n3.id = COUNT(n1.id) LIMIT 1),(SELECT n2.id FROM names n2 ORDER BY COUNT(n1.id) LIMIT 1) FROM names n1;
[ERROR] PATH:LINENUM DATE TIME : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 39):

SELECT (SELECT id FROM names n1 WHERE COUNT(n2.id) = 6 LIMIT 1),COUNT(n2.id) FROM names n2;
                                      ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 39):

SELECT (SELECT id FROM names n1 WHERE COUNT(n2.id) = 6 LIMIT 1),COUNT(n2.id) FROM names n2;
                                      ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT (SELECT id FROM names n1 WHERE COUNT(n2.id) = 6 LIMIT 1),COUNT(n2.id) FROM names n2;
